--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
     />
   </head>
-  <body class="font-firago overflow-hidden">
+  <body class="font-firago overflow-x-hidden overflow-y-auto">
     <header
       class="w-full bg-white p-4 flex justify-between tablet:px-12 medium:max-w-container medium:mx-auto medium:px-0 desktop:max-w-containerLarge"
     >
@@ -172,6 +172,71 @@
           </div>
         </div>
       </div>
+      <div class="w-full px-4 mt-12 mb-10 flex flex-col tablet:px-0 tablet:flex-row flex-wrap justify-between medium:flex-nowrap">
+        <div class="shadow-large rounded-xl bg-white p-0.5 w-full medium:w-1/2 medium:order-2">
+          <img src="./img/content-1.png" alt=" " class="rounded-xl w-full medium:h-[calc(50%+30%)] medium:object-cover" />
+          <h3
+            class="p-4 text-black text-headLine2 border-b border-interface-200"
+          >
+            ჩრდილოეთ კორეამ აშშ-სა და სამხრეთ კორეის წინააღმდეგ იმიტირებული
+            ბირთვული კონტრშეტევა დაიწყო
+          </h3>
+          <div class="flex items-center justify-between p-4">
+            <span class="text-primary text-headLine3">ახალი ამბები</span>
+            <span class="text-interface-400 text-sliderType">18.03.2024</span>
+          </div>
+        </div>
+        <div class="tablet:w-[calc(50%-16px)] medium:order-1 medium:w-[calc(25%-24px)] desktop:w-[calc(25%-32px)]">
+          <div class="shadow-large rounded-xl bg-white p-0.5 mt-4 medium:mt-0">
+            <img src="./img/content-2.png" alt=" " class="rounded-xl w-full" />
+            <div class="p-4">
+              <span class="block text-interface-400 pb-2"
+                >პოლიტიკა • 18.03.2022</span
+              >
+              <span class="text-black text-headLine3"
+                >კიმ ჩენ ინი აშშ-სა და სამხრეთ კორეას ბირთვული იარაღით
+                ემუქრება</span
+              >
+            </div>
+          </div>
+          <div class="shadow-large rounded-xl bg-white p-0.5 mt-4">
+            <img src="./img/content-3.png" alt=" " class="rounded-xl w-full" />
+            <div class="p-4">
+              <span class="block text-interface-400 pb-2"
+                >სპორტი • 18.03.2022</span
+              >
+              <span class="text-black text-headLine3"
+                >საქართველოს მორაგბეთა ნაკრები „რაგბი ევროპის“
+                გამარჯვებულია</span
+              >
+            </div>
+          </div>
+        </div>
+        <div class="tablet:w-[calc(50%-16px)] medium:order-3 medium:w-[calc(25%-24px)] desktop:w-[calc(25%-32px)]">
+          <div class="shadow-large rounded-xl bg-white p-0.5 mt-4  medium:mt-0">
+            <img src="./img/content-4.png" alt=" " class="rounded-xl w-full" />
+            <div class="p-4">
+              <span class="block text-interface-400 pb-2"
+                >მედიცინა • 18.03.2022</span
+              >
+              <span class="text-black text-headLine3"
+                >დღეს კიბოს სკრინინგის მხარდასაჭერი კონცერტი გაიმართება</span
+              >
+            </div>
+          </div>
+          <div class="shadow-large rounded-xl bg-white p-0.5 mt-4">
+            <img src="./img/content-5.png" alt=" " class="rounded-xl w-full" />
+            <div class="p-4">
+              <span class="block text-interface-400 pb-2"
+                >პოლიტიკა • 18.03.2022</span
+              >
+              <span class="text-black text-headLine3"></span>
+                უკრაინას დიდი კონტრშეტევისთვის მხოლოდ ერთი</span
+              >
+            </div>
+          </div>
+        </div>
+      </div>
     </main>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
@@ -181,6 +246,11 @@
           prevEl: ".arrow-prev",
         },
         loop: true,
+      });
+
+      swiper.on("slideChange", (sw) => {
+        const sliderCounter = document.getElementById("sliderCounter");
+        sliderCounter.innerHTML = sw.realIndex + 1;
       });
     </script>
     <script src="./script.js"></script>
